v2.6/getting-started/kubernetes/tutorials/stars-policy/policies/allow-ui.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1 
metadata:
  namespace: stars
  name: allow-ui 
spec:
  podSelector:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              role: management-ui
