v2.6/getting-started/kubernetes/tutorials/stars-policy/policies/default-deny.yaml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: default-deny
spec:
  podSelector:
    matchLabels: {}
